force-app/main/default/objects/ZRH_Asistencia__c/ZRH_Asistencia__c.object-meta.xml
<CustomObject>
    <label>Asistencia</label>
    <nameField>
        <label>Nombre Empresa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asistencias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>