force-app/main/default/objects/ZRH_Asistencia__c/fields/ZRH_CodigoDeTipoDeInstitucionContrato__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CodigoDeTipoDeInstitucionContrato__c</fullName>
    <label>Código de Tipo de Institucion Contrato</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>