force-app/main/default/objects/ZRH_Asistencia__c/fields/ZRH_CodigoEmpresa__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CodigoEmpresa__c</fullName>
    <label>Código Empresa</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>