force-app/main/default/objects/ZRH_Asistencia__c/fields/ZRH_CodigoEstadoContrato__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CodigoEstadoContrato__c</fullName>
    <label>Código Estado Contrato</label>
    <length>1</length>
    <type>Text</type>
</CustomField>