force-app/main/default/objects/ZRH_Asistencia__c/fields/ZRH_CodigoText__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CodigoText__c</fullName>
    <formula>TEXT(ZRH_Codigo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Text</label>
    <type>Text</type>
</CustomField>