force-app/main/default/objects/ZRH_Asistencia__c/fields/ZRH_DescripcionEstadoTipoDeContrato__c.field-meta.xml
<CustomField>
    <fullName>ZRH_DescripcionEstadoTipoDeContrato__c</fullName>
    <label>Descripción Estado Tipo de Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>