force-app/main/default/objects/ZRH_Asistencia__c/fields/ZRH_Empresa__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Empresa__c</fullName>
    <label>Empresa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>