force-app/main/default/objects/ZRH_Asistencia__c/fields/ZRH_FechaInicialDeVigencia__c.field-meta.xml
<CustomField>
    <fullName>ZRH_FechaInicialDeVigencia__c</fullName>
    <label>Fecha Inicial de Vigencia</label>
    <required>true</required>
    <type>Date</type>
</CustomField>