force-app/main/default/objects/ZRH_Asistencia__c/fields/ZRH_TipoDeInstitucion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TipoDeInstitucion__c</fullName>
    <label>Tipo de Institución</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>