force-app/main/default/objects/ZRH_Asistencia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ZRH_Codigo__c</columns>
    <columns>ZRH_CodigoEmpresa__c</columns>
    <columns>ZRH_CodigoDeTipoDeInstitucionContrato__c</columns>
    <columns>ZRH_TipoDeInstitucion__c</columns>
    <columns>ZRH_FechaInicialDeVigencia__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las Asistencias</label>
</ListView>